# ffx3eb_DS5111su24_lab_01

./: Makefile  README.md  pyproject.toml  requirements.txt  test_text_processing.py  text_processing.py
.github/workflows/: validations.yml
src/ffx3eb/: __init__.py
tests/: test_clean_text.py  test_count_words.py  test_integrations.py  test_tokenizer.py
