[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffx3eb"
version = "0.0.2"
authors = [
  { name="K.Patterson", email="ffx3eb@virginia.edu" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/kpatte/ffx3eb_DS5111su24_lab_01"
Issues = "https://github.com/kpatte/ffx3eb_DS5111su24_lab_01/issues"

